samples/_failures_safe/1761455200_9263dc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_94e7efa2.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_94e7efa2.c:154:9: error: expected declaration or statement at end of input
  154 |         token->value[0] = current;
      |         ^~~~~
./samples/SAFE/__tmp_94e7efa2.c:154:9: error: expected declaration or statement at end of input
